# nmpde-projects

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  simulate.sh
backup/: MeshGenerator.hpp
configs/: launch_config.txt  report_config.txt
configs/not_passed/: cube_tests.txt
mesh/: generate.sh
mesh/geo/: mesh_ellipse_ref.geo
scripts/: Makefile  MeshGenerator.hpp  acorn_tests.txt  cube_tests.txt  generate_meshes.cpp  guccione_config.txt  launch_all.txt  launch_config.txt  mesh_ellipse_coarse.geo  mesh_ellipse_fine.geo  report_config.txt  to_check.txt
scripts/mesh/: mesh_ellipse.geo
scripts/not_passed/: cube_tests.txt
scripts/passed/: acorn_tests.txt  cube_tests.txt  guccione_config.txt
src/: Guccione.cpp  Guccione.hpp  MechanicalDisplacement.cpp  MechanicalDisplacement.hpp  MeshGenerator.hpp  NeoHooke.cpp  NeoHooke.hpp  Rewrite.hpp  TestConditions.cpp  TestConditions.hpp  TestFunctions.cpp  TestFunctions.hpp  Work.cpp  main.cpp
src/headers/: Guccione.hpp  MechanicalDisplacement.hpp  MeshGenerator.hpp  NeoHooke.hpp  TestConditions.hpp  Work.hpp  defs.hpp
